# HOUNDY

./: .gitignore  Cargo.toml  README.md  houndy_analysis.md
crates/houndy_auth/: Cargo.toml
crates/houndy_auth/src/: kerberos.rs  lib.rs
crates/houndy_core/: Cargo.toml
crates/houndy_core/src/: converter.rs  main.rs
crates/houndy_evasion/: Cargo.toml
crates/houndy_evasion/src/: lib.rs  syscalls.rs  unhook.rs
crates/houndy_output/: Cargo.toml
crates/houndy_output/src/: json.rs  lib.rs  zip.rs
crates/houndy_parser/: Cargo.toml
crates/houndy_parser/src/: acl.rs  gpo.rs  lib.rs  secdesc.rs  session.rs  sid.rs
crates/houndy_protocol/: Cargo.toml
crates/houndy_protocol/src/: adws.rs  ldap.rs  lib.rs
releases/: RELEASE_NOTES.md
