[package]
name = "houndy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Workspace Members
houndy_evasion = { path = "../houndy_evasion" }
houndy_protocol = { path = "../houndy_protocol" }
houndy_auth = { path = "../houndy_auth" }
houndy_parser = { path = "../houndy_parser" }
houndy_output = { path = "../houndy_output" }
