[package]
name = "houndy_evasion"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation"
]
