[package]
name = "houndy_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ldap3 = { version = "0.12", default-features = false, features = ["tls", "gssapi"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
log = "0.4"
